Fixed contrast error on footer

--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -47,5 +47,9 @@ footer {
     color: white;
     text-align: center;
     padding: 0.25em;
+    font-size: 1.5em;
+}
+#updated {
     font-family: 'Orbitron', sans-serif;
+    text-shadow: 2px 2px 5px black;
 }
